--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
+        "lucide-react": "^0.503.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.7.2",
